# 2p2

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
packaging/: RemoteDesk.spec  installer.iss  main.py
scripts/: build.ps1
src/remote_desk/: __init__.py  _version.py  installer.py
src/remote_desk/agent/: __init__.py  __main__.py  capture.py  connection.py  consent.py  input_controller.py
src/remote_desk/app/: __init__.py  __main__.py  agent_panel.py  home_window.py  theme.py
src/remote_desk/common/: __init__.py  config.py  crypto.py  favorites.py  identity.py  logging.py  paths.py  protocol.py  webrtc.py
src/remote_desk/controller/: __init__.py  __main__.py  connection.py
src/remote_desk/controller/ui/: __init__.py  controller_panel.py  main_window.py  video_widget.py
src/remote_desk/server/: __init__.py  __main__.py  app.py  registry.py  security.py
src/remote_desk/updater/: __init__.py  download.py  github.py  service.py  version.py
tests/: test_crypto.py  test_identity.py  test_protocol.py  test_security.py  test_updater.py
